unpackaged/main/default/objects/OpportunityLineItem/fields/Number_of_Revenue_Installments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Revenue_Installments__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>PricebookEntry.Product2.NumberOfRevenueInstallments</formula>
    <label>Number of Revenue Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>