unpackaged/main/default/objects/OpportunityLineItem/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(PricebookEntry.Product2.Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>