unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Family_NL3_Plan__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_NL3_Plan__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(  PricebookEntry.Product2.Family  )</formula>
    <label>Product Family (NL3-Plan)</label>
    <type>Text</type>
</CustomField>