unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(PricebookEntry.Product2.Product_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>