unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Sub_Family_NL4__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family_NL4__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT( PricebookEntry.Product2.Product_Sub_Family_NL4__c )</formula>
    <label>Product Sub-Family [NL4]</label>
    <type>Text</type>
</CustomField>