unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT( PricebookEntry.Product2.Product_Type__c )</formula>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>