unpackaged/main/default/objects/OpportunityLineItem/fields/Quantity_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Unit_of_Measure__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>Text(PricebookEntry.Product2.QuantityUnitOfMeasure )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Unit of Measure</label>
    <type>Text</type>
</CustomField>