unpackaged/main/default/objects/OpportunityLineItem/fields/Reporting_Level__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Level__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT( PricebookEntry.Product2.Reporting_Level__c )</formula>
    <label>Reporting Level</label>
    <type>Text</type>
</CustomField>