unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Installment_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Installment_Period__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(PricebookEntry.Product2.RevenueInstallmentPeriod )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Installment Period</label>
    <type>Text</type>
</CustomField>