unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Model__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Model__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(PricebookEntry.Product2.Revenue_Model__c )</formula>
    <label>Revenue Model</label>
    <type>Text</type>
</CustomField>