unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Type__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT( PricebookEntry.Product2.RevenueScheduleType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Schedule Type</label>
    <type>Text</type>
</CustomField>