unpackaged/main/default/objects/OpportunityLineItem/fields/Revenue_Scheduling_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Scheduling_Enabled__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>PricebookEntry.Product2.CanUseRevenueSchedule</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Scheduling Enabled</label>
    <type>Checkbox</type>
</CustomField>