unpackaged/main/default/objects/OpportunityLineItem/fields/Solution_Group_NL1__c.field-meta.xml
<CustomField>
    <fullName>Solution_Group_NL1__c</fullName>
    <description>created for TAGCRM-1063</description>
    <formula>TEXT(PricebookEntry.Product2.Solution_Group_NL1__c)</formula>
    <label>Solution Group [NL1]</label>
    <type>Text</type>
</CustomField>