unpackaged/main/default/objects/OpportunityLineItem/fields/Solution_Type_NL2__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type_NL2__c</fullName>
    <description>created for TAGCRM-1063</description>
    <formula>TEXT(PricebookEntry.Product2.Solution_Type_NL2__c)</formula>
    <label>Solution Type [NL2]</label>
    <type>Text</type>
</CustomField>