unpackaged/main/default/objects/OpportunityLineItem/fields/Standard_Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Currency__c</fullName>
    <description>created for TAGCRM-934</description>
    <formula>TEXT(PricebookEntry.Product2.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Price Currency</label>
    <type>Text</type>
</CustomField>